<resources>
    <string name="app_name">Vimora</string>
    <string name="appTitle">Vimora</string>
    <string name="splashTagline">Track. Train. Transform.</string>
    <string name="appTitleDesc">Vimora</string>
    <string name="appBackgroundDesc">The background</string>
    <string name="signupButtonDesc">signup</string>
    <string name="loginButtonDesc">login</string>
    <string name="welcomeLogoDesc">Vimora</string>
    <string name="signupLabel"><![CDATA[Join us at Vimora!]]></string>
    <string name="signupName">Enter your name</string>
    <string name="signupPhone">Enter your phone number</string>
    <string name="signupEmail">Enter your email</string>
    <string name="signupNameLabel">Name</string>
    <string name="signupPhoneLabel">Phone</string>
    <string name="signupEmailLabel">Email</string>
    <string name="signupSubmitDesc">Sign Up</string>
    <string name="signupForgotPasswordDesc">Forgot Password</string>
    <string name="signupPassword">Enter a password</string>
    <string name="signuPasswordLabel">Password</string>
    <string name="profileCardName">PROFILE</string>
    <string name="trackCardName">TRACK</string>
    <string name="planCardName">PLAN</string>
    <string name="reminderIconDesc">reminder</string>
    <string name="settingsIconDesc">settings</string>
    <string name="signupTraineeOrTrainer">I am a</string>
    <string-array name="signupTraineeTrainer">
        <item>Trainee</item>
        <item>Trainer</item>
    </string-array>
    <string name="inputHeight">Height (cm)</string>
    <string name="inputWeight">Weight (kg)</string>
    <string name="inputAge">Age</string>
</resources>