<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF6501"
    tools:context=".WelcomeActivity">


    <ImageView
        android:id="@+id/welcomeLogo"
        android:layout_width="400dp"
        android:layout_height="274dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/welcomeLogoDesc"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash" />

    <ImageView
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/loginButtonDesc"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signupButton"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLogo"
        app:srcCompat="@drawable/login" />

    <ImageView
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/signupButtonDesc"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/loginButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLogo"
        app:srcCompat="@drawable/signup" />

</androidx.constraintlayout.widget.ConstraintLayout>
