<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF6501"
    tools:ignore="ExtraText">
    tools:context=".Signup2Activity">

    <ImageView
        android:id="@+id/imgSignupBack"
        android:layout_width="0dp"
        android:layout_height="583dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginbackground" />

    <TextView
        android:id="@+id/signupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Join the Vimora family!"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgSignupBack" />

    <TextView
        android:id="@+id/signupAgeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="Age"
        app:layout_constraintBottom_toTopOf="@+id/edittxtAge"
        app:layout_constraintEnd_toEndOf="@+id/edittxtAge"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signupHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/inputHeight"
        app:layout_constraintBottom_toTopOf="@+id/edittxtHeight"
        app:layout_constraintEnd_toEndOf="@+id/edittxtHeight"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/signupNext"
        android:layout_width="120dp"
        android:layout_height="72dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/signupSubmitDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxtWeight"
        app:srcCompat="@drawable/signup" />

    <TextView
        android:id="@+id/signupWeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/inputWeight"
        app:layout_constraintBottom_toTopOf="@+id/edittxtWeight"
        app:layout_constraintEnd_toEndOf="@+id/edittxtWeight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edittxtWeight"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="#F4F4F4"
        android:ems="10"
        android:hint="@string/inputWeight"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxtHeight" />

    <EditText
        android:id="@+id/edittxtAge"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:background="#F4F4F4"
        android:ems="10"
        android:hint="Age"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgSignupBack" />

    <EditText
        android:id="@+id/edittxtHeight"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="#F4F4F4"
        android:ems="10"
        android:hint="@string/inputHeight"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxtAge" />

</androidx.constraintlayout.widget.ConstraintLayout>