<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F2F8"
    tools:context=".TrainerPlanActivity">

    <!--Upper section-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="36dp"
        android:paddingBottom="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/trainerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trainer Name"
            android:textSize="18sp"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/reminderIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/reminderIconDesc"
            android:src="@drawable/remindericon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settings"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/settingsIconDesc"
            android:src="@drawable/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--Profile card-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileCard"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/splashcardbg"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/profileLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileCardName"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--Track card-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/trackCard"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="-60dp"
        android:background="@drawable/trackcardbg"
        app:layout_constraintTop_toBottomOf="@id/profileCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/trackLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trackCardName"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--Plan card-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/planCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/planbg"
        app:layout_constraintTop_toBottomOf="@id/trackCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/planLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PLAN"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/exerciseType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Warm up"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@id/planLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/exerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lower Body Training"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/exerciseType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/exercisetype2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="157dp"
            android:layout_marginTop="272dp"
            android:layout_marginEnd="157dp"
            android:layout_marginBottom="263dp"
            android:text="Stretch"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseName" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="222dp"
            android:layout_marginBottom="491dp"
            android:text="Quads"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>