<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF6501"
    tools:context=".trianee.TraineeProfileActivity">

    <ImageView
        android:id="@+id/imageTrackBack"
        android:layout_width="380dp"
        android:layout_height="680dp"
        android:layout_marginTop="88dp"
        android:contentDescription="TrackBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/track" />

    <ImageView
        android:id="@+id/imagePlanBack"
        android:layout_width="380dp"
        android:layout_height="680dp"
        android:layout_marginTop="64dp"
        android:contentDescription="PlanBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageTrackBack"
        app:srcCompat="@drawable/plan" />

    <ImageView
        android:id="@+id/imageprofileBack"
        android:layout_width="0dp"
        android:layout_height="680dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="ProfileBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagePlanBack"
        app:srcCompat="@drawable/profile" />

    <EditText
        android:id="@+id/editTxtTraineeAge"
        android:layout_width="242dp"
        android:layout_height="47dp"
        android:layout_marginTop="7dp"
        android:background="#F4F4F4"
        android:ems="10"
        android:hint="@string/inputAge"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge" />

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/inputAge"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePlanBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageprofileBack"
        app:layout_constraintVertical_bias="0.659" />

    <Button
        android:id="@+id/btnTrackOfProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#00FFFFFF"
        android:text="TRACK"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageTrackBack" />

    <Button
        android:id="@+id/btnPlanOfProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#00FFFFFF"
        android:text="PLAN"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imagePlanBack" />

    <Button
        android:id="@+id/btnProfileOfProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#00FFFFFF"
        android:text="PROFILE"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageprofileBack"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePlanBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageprofileBack"
        app:layout_constraintVertical_bias="0.661" />

    <TextView
        android:id="@+id/txtTrainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Trainer"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePlanBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageprofileBack"
        app:layout_constraintVertical_bias="0.176" />

    <ImageButton
        android:id="@+id/btnLogout"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:background="#00FFFFFF"
        android:contentDescription="logout"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/btnReminder"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnReminder"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:background="#00FFFFFF"
        android:contentDescription="reminder"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reminder"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtTrainerName"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:background="#F4F4F4"
        android:ems="10"
        android:hint="  Select Trainer"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toEndOf="@+id/txtTrainer"
        app:layout_constraintTop_toBottomOf="@+id/btnProfileOfProfile"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTxtTraineeName"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:background="#F4F4F4"
        android:ems="10"
        android:hint="  Name"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePlanBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageprofileBack"
        app:layout_constraintVertical_bias="0.247" />

    <EditText
        android:id="@+id/editTxtTraineeHeight"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:background="#F4F4F4"
        android:ems="10"
        android:hint="@string/inputHeight"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeight" />

    <EditText
        android:id="@+id/editTxtTraineeWeight"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:background="#F4F4F4"
        android:ems="10"
        android:hint="@string/inputWeight"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWeight" />

    <TextView
        android:id="@+id/txtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/inputWeight"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePlanBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageprofileBack"
        app:layout_constraintVertical_bias="0.522" />

    <TextView
        android:id="@+id/txtHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputHeight"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePlanBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageprofileBack"
        app:layout_constraintVertical_bias="0.385" />

    <TextView
        android:id="@+id/txtOutputBMI"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:background="#F4F4F4"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBMI" />
</androidx.constraintlayout.widget.ConstraintLayout>